; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_sysrq.c___sysrq_swap_key_ops.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_sysrq.c___sysrq_swap_key_ops.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sysrq_key_op = type { i32 }

@sysrq_key_table_lock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.sysrq_key_op*, %struct.sysrq_key_op*)* @__sysrq_swap_key_ops to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__sysrq_swap_key_ops(i32 %0, %struct.sysrq_key_op* %1, %struct.sysrq_key_op* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.sysrq_key_op*, align 8
  %6 = alloca %struct.sysrq_key_op*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store %struct.sysrq_key_op* %1, %struct.sysrq_key_op** %5, align 8
  store %struct.sysrq_key_op* %2, %struct.sysrq_key_op** %6, align 8
  %9 = load i64, i64* %8, align 8
  %10 = call i32 @spin_lock_irqsave(i32* @sysrq_key_table_lock, i64 %9)
  %11 = load i32, i32* %4, align 4
  %12 = call %struct.sysrq_key_op* @__sysrq_get_key_op(i32 %11)
  %13 = load %struct.sysrq_key_op*, %struct.sysrq_key_op** %6, align 8
  %14 = icmp eq %struct.sysrq_key_op* %12, %13
  br i1 %14, label %15, label %19

15:                                               ; preds = %3
  %16 = load i32, i32* %4, align 4
  %17 = load %struct.sysrq_key_op*, %struct.sysrq_key_op** %5, align 8
  %18 = call i32 @__sysrq_put_key_op(i32 %16, %struct.sysrq_key_op* %17)
  store i32 0, i32* %7, align 4
  br label %20

19:                                               ; preds = %3
  store i32 -1, i32* %7, align 4
  br label %20

20:                                               ; preds = %19, %15
  %21 = load i64, i64* %8, align 8
  %22 = call i32 @spin_unlock_irqrestore(i32* @sysrq_key_table_lock, i64 %21)
  %23 = load i32, i32* %7, align 4
  ret i32 %23
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local %struct.sysrq_key_op* @__sysrq_get_key_op(i32) #1

declare dso_local i32 @__sysrq_put_key_op(i32, %struct.sysrq_key_op*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
